--- a/index.html
+++ b/index.html
@@ -455,8 +455,7 @@
         background-color: #c27ba0;
         color: #000001;
         width: 100%;
-        height: 100%;
-        whitespace: nowrap;
+        height: 100px;
       }
 
       .ritz .waffle .s20 select option {
@@ -476,7 +475,7 @@
       }
   </style>
 
-  <div style="padding: 0 0 0 4; margin: 0 0 0 0; border: 0 0 0 0; font-family: sans-serif; color: white; vertical-align: bottom; white-space: nowrap; font-weight: bold; width: 100%">
+  <td colspan="6" style="padding: 0 0 0 4; margin: 0 0 0 0; border: 0 0 0 0; font-family: sans-serif; color: white; vertical-align: bottom; white-space: nowrap; font-weight: bold; width: 100%">
     Method Colors Legend:  (
     <div class="color-box" style="background-color: #ff2828; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
     Methods relating to health <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
@@ -491,7 +490,7 @@
     <div class="color-box" style="background-color: orange; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
     Self-contained Relations)
     Variable Colors Legend:  (
-    <div class="color-box" style="background-color: #ff2828; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
+    <div class="color-box" style="background-color: #ff2828; width: 12px; height: 12px; padding: 0 0 0 0"></div>
     Methods relating to health <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
     <div class="color-box" style="background-color: #00ff00; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
     Methods relating to currency <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
@@ -503,7 +502,7 @@
     Methods relating to energy <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
     <div class="color-box" style="background-color: orange; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
     Self-contained Relations)
-  </div>
+  </td>
   
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
@@ -1131,7 +1130,7 @@
                   </th>
                   <td class="s15" dir="ltr">GameLoop</td>
                   <td class="s17" dir="ltr">AddSparks</td>
-                  <td class="s11" dir="ltr" style="background-color: #f0cf6b">spark amount</td>
+                  <td class="s11" dir="ltr" style="background-color: #f06985">spark amount</td>
                   <td class="s7"><br></td>
                   <td class="s8"><br></td>
                   <td class="s9" dir="ltr">Gives the specified amount of sparks</td>
@@ -1142,7 +1141,7 @@
                   </th>
                   <td class="s15" dir="ltr">GameLoop</td>
                   <td class="s16" dir="ltr">Heal</td>
-                  <td class="s11" dir="ltr" style="background-color: #f0cf6b">health amount</td>
+                  <td class="s11" dir="ltr" style="background-color: #f06985">health amount</td>
                   <td class="s7"><br></td>
                   <td class="s8"><br></td>
                   <td class="s9" dir="ltr">Refills Zoe&apos;s health bar by the specified amount</td>
@@ -1197,8 +1196,8 @@
                   </th>
                   <td class="s19" dir="ltr">FactSystem</td>
                   <td class="s6" dir="ltr">AddToFact</td>
-                  <td class="s11" dir="ltr">fact name</td>
-                  <td class="s11" dir="ltr" style="background-color: #c4c4c4">fact value</td>
+                  <td class="s11" dir="ltr" style="background-color: #f0cf6b">fact name</td>
+                  <td class="s11" dir="ltr" style="background-color: #797aa3">fact value</td>
                   <td class="s20" dir="ltr" rowspan="5">
                     <select>
                       <option disabled selected hidden>Click to view list of fact names</option>
@@ -1275,7 +1274,7 @@
                   <td class="s19" dir="ltr">FactSystem</td>
                   <td class="s6" dir="ltr">SetFact</td>
                   <td class="s11" dir="ltr" style="background-color: #f0cf6b">fact name</td>
-                  <td class="s11" dir="ltr" style="background-color: #c4c4c4">fact value</td>
+                  <td class="s11" dir="ltr" style="background-color: #797aa3">fact value</td>
                   <td class="s9" dir="ltr">Adds the specified fact to the fact list with the specified value, or alters the specified fact if it already exists in the fact list</td>
               </tr>
               <tr style="height: 20px;">
