--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
       }
   </style>
 
-  <td colspan="6" style="padding: 0 0 0 4; margin: 0 0 0 0; border: 0 0 0 0; font-family: sans-serif; color: white; vertical-align: bottom; white-space: nowrap; font-weight: bold; width: 100%">
+  <div style="padding: 0 0 0 4; margin: 0 0 0 0; border: 0 0 0 0; font-family: sans-serif; color: white; vertical-align: bottom; white-space: nowrap; font-weight: bold; width: 100%">
     Method Colors Legend:  (
     <div class="color-box" style="background-color: #ff2828; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
     Methods relating to health <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
@@ -489,20 +489,20 @@
     Methods relating to energy <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
     <div class="color-box" style="background-color: orange; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
     Self-contained Relations)
+  </div>
+  <div style="padding: 0 0 0 4; margin: 0 0 0 0; border: 0 0 0 0; font-family: sans-serif; color: white; vertical-align: bottom; white-space: nowrap; font-weight: bold; width: 100%">
     Variable Colors Legend:  (
-    <div class="color-box" style="background-color: #ff2828; width: 12px; height: 12px; padding: 0 0 0 0"></div>
-    Methods relating to health <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-    <div class="color-box" style="background-color: #00ff00; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to currency <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-    <div class="color-box" style="background-color: #00ffff; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to fragments <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-    <div class="color-box" style="background-color: #3030ff; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to shards <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-    <div class="color-box" style="background-color: #ffff00; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
-    Methods relating to energy <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
-    <div class="color-box" style="background-color: orange; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
-    Self-contained Relations)
-  </td>
+    <div class="color-box" style="background-color: #f06985; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
+    Variable is an integer <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+    <div class="color-box" style="background-color: #8ac4f0; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
+    Variable is a boolean <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+    <div class="color-box" style="background-color: #f0cf6b; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
+    Variable is a string <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+    <div class="color-box" style="background-color: #baff48; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
+    Variable is json <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+    <div class="color-box" style="background-color: #797aa3; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
+    Variable type is determined by the options <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+  </div>
   
   <div class="ritz grid-container" dir="ltr">
       <table class="waffle" cellspacing="2" cellpadding="0" style="width:100%;">
