--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <div class="color-box" style="background-color: #baff48; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
     Variable is json <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
     <div class="color-box" style="background-color: #797aa3; width: 12px; height: 12px; display: inline-block; padding: 0 0 0 0"></div>
-    Variable type is determined by the options <hr style="height: 20px; width: 5px; margin-bottom: 0px; margin-top: 0px; margin-left: 15px; margin-right: 15px; display: inline-block; vertical-align: bottom; border-width:0; color:gray; background-color:gray"></hr>
+    Variable type is determined by it's options)
   </div>
   
   <div class="ritz grid-container" dir="ltr">
